k8s/monitoring-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evidently-monitoring
  namespace: mlops-sentiment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evidently-monitoring
  template:
    metadata:
      labels:
        app: evidently-monitoring
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: monitoring
          image: registry.ntdevopsregistry.io.vn/mlops/spotify-monitoring:v10
