k8s/test-train-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: manual-train-test
  namespace: airflow
spec:
  containers:
  - name: train-container
    image: 172.31.87.182/spotify-mlops/sentiment-trainer:latest
    imagePullPolicy: IfNotPresent
    workingDir: /opt/repo/model
    command: ["python", "train.py"]
    volumeMounts:
    - name: shared-code
      mountPath: /opt/repo

  volumes:
  - name: shared-code
    emptyDir: {}
  
  restartPolicy: Never
