k8s/collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
  namespace: mlops-sentiment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
      - name: collector
        image: registry.ntdevopsregistry.io.vn/mlops/collector:fb312d7c8271cfa2963e6e55ff9d5c871f14ef54
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: collector
  namespace: mlops-sentiment
spec:
  selector:
    app: collector
  ports:
  - port: 8002
    targetPort: 8000
